WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80064
[chromium] Fix errors in LayerRendererChromium cleanup
https://bugs.webkit.org/show_bug.cgi?id=80064
Summary
[chromium] Fix errors in LayerRendererChromium cleanup
Kenneth Russell
Reported
2012-03-01 16:09:02 PST
LayerRendererChromium's cleanup path doesn't match the declaration order of the OwnPtrs to ProgramBindings in its header, and there are consequently a couple of objects which aren't getting cleaned up properly. This is leading to assertion failures during lost context operations and interfering with the investigation of
http://crbug.com/113125
.
Attachments
Patch
(4.18 KB, patch)
2012-03-01 16:11 PST
,
Kenneth Russell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2012-03-01 16:11:19 PST
Created
attachment 129766
[details]
Patch
James Robinson
Comment 2
2012-03-01 16:14:18 PST
Comment on
attachment 129766
[details]
Patch R=me. This code has gotten smelly :(
WebKit Review Bot
Comment 3
2012-03-02 01:13:03 PST
Comment on
attachment 129766
[details]
Patch Clearing flags on attachment: 129766 Committed
r109528
: <
http://trac.webkit.org/changeset/109528
>
WebKit Review Bot
Comment 4
2012-03-02 01:13:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug