[chromium] Fix errors in LayerRendererChromium cleanup https://bugs.webkit.org/show_bug.cgi?id=80064

Reviewed by James Robinson.

Tested manually by forcing lost context while rendering Flash on
Mac OS in a Debug build.

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::cleanupSharedObjects):


Canonical link: https://commits.webkit.org/97204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109528 268f45cc-cd09-0410-ab3c-d52691b4dbfc